--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "grpc-web-simple-example",
   "version": "0.1.0",
   "description": "gRPC-Web simple example",
+  "scripts": {
+    "start": "webpack-dev-server --inline --mode development --entry ./client.js --output main.js"
+  },
   "devDependencies": {
     "@grpc/proto-loader": "^0.3.0",
     "async": "^1.5.2",
@@ -10,6 +13,7 @@
     "grpc-web": "^1.0.0",
     "lodash": "^4.6.1",
     "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.14"
   }
 }
